fixing IE situation with white space

--- a/development/scss/_ug-framework.scss
+++ b/development/scss/_ug-framework.scss
@@ -96,6 +96,7 @@ body.canvas #wrapper {
 #main-content #interior-wrapper #centerColumn.col-md-9 {
 	padding-right: 0;
 	background: $white;
+	vertical-align: top;
 }
 
 /* UG-BUTTON */
